// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a single expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.15
  </h1>
</div>
`;

exports[`should render empty ExpensesSummary correctly 1`] = `
<div>
  <h1>
    Viewing 0 expenses
  </h1>
</div>
`;

exports[`should render multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $9.32
  </h1>
</div>
`;
